<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainAcitivity">

    <!--<item android:id="@+id/action_home" android:title="@string/action_home"-->
        <!--android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_contact" android:title="@string/action_contact"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/action_developer" android:title="@string/action_developer"
        android:orderInCategory="103" app:showAsAction="never" />



</menu>
