<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="5"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="theoaktroop.irb24.net.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
       android:layout_weight="5"
        android:layout_height="0dp"

        >

        <LinearLayout
            android:layout_weight="5"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_irb_headline"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#458B00"/>

            <TextView android:text="@string/about_irb" android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate"
                android:textColor="#215E21"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>



    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:id="@+id/adAboutActivity"
        android:gravity="center">
        <com.google.android.gms.ads.AdView
            android:id="@+id/addViewAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</LinearLayout>
